busybox.yaml
apiVersion: v1
kind: Pod
metadata:
   name: busybox
spec:
   securityContext:
      runAsUser: 37
      runAsGroup: 25
      fsGroup: 25
   containers:
   - name: busybox
     image: busybox-custom
     command:
     - sleep
     - "1000"
     volumeMounts:
     - name: my-config
       mountPath: /var/jfrog
   volumes:
   - name: my-config
     configMap:
        name: my-config
