busybox1.yaml
apiVersion: v1
kind: Pod
metadata:
   name: busybox
spec:
   containers:
   - name: busybox
     image: busybox
     command:
     - sleep
     - "1000"
