nginx-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-ingress-default-backend
spec:
    replicas: 1
    selector:
       matchLabels:
           name: nginx-ingress
    template:
       metadata:
           labels:
              name: nginx-ingress
       spec:
         containers:
         - image: k8s.gcr.io/defaultbackend-amd64:1.5
           name: nginx-ingress-default-backend
           ports:
           - containerPort: 8080
             name: http
             protocol: TCP
         serviceAccount: nginx-ingress-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-ingress-controller
spec:
    replicas: 1
    selector:
       matchLabels:
           name: nginx-ingress
    template:
       metadata:
           labels:
              name: nginx-ingress
       spec:
           containers:
           - name: nginx-ingress-controller
             image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.25.0
             args:
                - /nginx-ingress-controller
                - --default-backend-service=default/nginx-ingress-default-backend
                - --election-id=ingress-controller-leader
                - --ingress-class=nginx
                - --configmap=default/nginx-ingress-controller
             ports:
                - name: http
                  hostPort: 80
                  containerPort: 80
                  protocol: TCP
           serviceAccount: nginx-ingress-controller
