poststart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        lifecycle:
           postStart:
              exec:
                 command: ["/bin/sh", "-c", "echo hello from handler > /usr/share/message"]
