default-backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-default-backend
spec:
  selector:
     matchLabels:
        app: nginx-default-backend
  template:
     metadata:
       labels:
        app: nginx-default-backend
     spec:
       containers:
       - name: default-backend
         image: gcr.io/google_containers/defaultbackend:1.0
         livenessProbe:
            httpGet:
               path: /healthz
               port: 8080
               scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
         ports:
         - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: nginx-default-backend
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: nginx-default-backend
