jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: docker-jenkins
spec:
   type: NodePort
   selector:
      app: docker-jenkins
   ports:
     - name: http
       port: 8080
       targetPort: 8080
       nodePort: 30000
     - name: agent
       port: 50000
       nodePort: 30001
       protocol: TCP
