Ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: bgl-arkavati
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: docker-jenkins
          servicePort: 8080
      - path: /nginx
        backend:
             serviceName: nginx
             servicePort: 80
